Fix select elements on Safari
Removes the default OS styling, and fixes incorrect placement of
the native picker window

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ body {
   margin: 0;
   inset: auto;
 
-  top: anchor(bottom); 
+  top: anchor(bottom);
   right: anchor(right);
   margin-top: 0.5rem;
 }
@@ -137,6 +137,15 @@ select {
   background: #2c313a;
   color: white;
   border: 1px solid #444;
+
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 292.4 292.4'%3E%3Cpath fill='%23fff' d='M287 69.4a17.6 17.6 0 0 0-13-5.4H18.4c-5 0-9.3 1.8-12.9 5.4A17.6 17.6 0 0 0 0 82.2c0 5 1.8 9.3 5.4 12.9l128 127.9c3.6 3.6 7.8 5.4 12.8 5.4s9.2-1.8 12.8-5.4L287 95c3.5-3.5 5.4-7.8 5.4-12.8 0-5-1.9-9.2-5.5-12.8z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 0.7rem top 50%;
+  background-size: 0.65rem auto;
+  padding-right: 2rem;
 }
 
 input[type="range"] {
